--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: PRISM NAIL STUDIO
-email:
+email: email@prismnailstudio.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "prismnailstudio.com" # the base hostname & protocol for your site
