--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,11 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "prismnailstudio.com" # the base hostname & protocol for your site
 
-facebook_username: prismnailstudio
-instagram_username: prismnailstudio
+social:
+  -title: instagram
+  url: https://www.instagram.com/prismnailstudio/
+  -title: facebook
+  url: https://www.facebook.com/prismnailstudio/
 
 # Build settings
 markdown: kramdown
